--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --background: #ffffff;
   --foreground: #171717;
 }
@@ -12,10 +12,49 @@
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  /* color: var(--foreground);
+  background: var(--background); */
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.theme-switch{
+  justify-self: flex-end;
+}
+.flex-box-right{
+  display: flex;
+  justify-content: flex-end;
+}
+
+.flex-box-left{
+  display: flex;
+}
+
+main{
+  margin:10px;
+}
+
+.infinite-table{
+  border-width: 0.5px;
+  border-radius: 5px;
+}
+.sort-box{
+  border-width: 0.5px;
+  border-radius: 5px;
+  padding:10px;
+}
+
+.repo-box{
+  border-bottom-width: 0.5px;
+  border-radius: 0;
+}
+
+.title{
+  font-size: medium;
+}
+
+.textinput-long{
+  width:100%;
 }
